# minesweeper

./: CMakeLists.txt  LICENSE  main.cpp
app/: CMakeLists.txt
cmake/: project_init.cmake  setup_conan.cmake  setup_corrosion.cmake
cpp/: CMakeLists.txt  main.cpp
cpp/cxx-utils/: CMakeLists.txt
cpp/cxx-utils/inc/: QAbstractTableModelCxx.h  QModelIndexCxx.h
qml/: CMakeLists.txt  Tile.qml  TileBackground.qml  main.qml  qml.qrc
rust/: CMakeLists.txt  Cargo.toml  build.rs
rust/inc/: QAbstractTableModelCxx.h  QModelIndexCxx.h
rust/src/: data.rs  lib.rs  minefield.rs  qt_minefield.rs
