[package]
name = "minesweeper-rs"
authors = [
    "Ben Leadbetter ben.leadbetter@hotmail.com",
]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.83"
cxx-qt = "0.4.1"
cxx-qt-lib = "0.4.1"
itertools = "0.10.5"
rand = "0.8.5"

[build-dependencies]
cxx-qt-build = "0.4.1"
